infrastructure/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-cert
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: lab-ca-issuer
spec:
  ingressClassName: traefik
  rules:
    - host: traefik.lab
      http:
        paths:
          - backend:
              service:
                name: traefik
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - traefik.lab
      secretName: traefik-dashboard-tls
